Make sure that *m_twinSpacer is iniitialized in panelspacer

This fixes a segfault of panelspacer on musl and 32bit glibc
systems.

BUG: 422914